Modify post_detail style. Change background color, Need to fix the description containr spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,10 +76,6 @@ footer p {
 
 /* Cards section */
 
-.card {
-    
-}
-
 .card-text {
     font-size: 1.2em;
     margin-top: -5px;
@@ -123,3 +119,22 @@ footer p {
     border: 1px solid black;
     height: 100px;
 }
+
+
+/* Recipe's details section */
+
+.recipe-container,
+.preparation-container {
+    background-color: rgb(248, 249, 250, 0.8);
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.recipe-detail-desc {
+    border: 3px solid red;
+}
+
+.recipe-detail-img {
+    border: 3px solid blue;
+}
+
